# max-yandexgpt

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: custom_bot.py  simple_bot.py
max_yandexgpt/: __init__.py  bot.py  config.py  llm.py
