[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "max-yandexgpt"
version = "0.1.0"
description = "Python framework for building Max messenger bots powered by YandexGPT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Nikolai Nabiev", email = "niko-rech@yandex.ru"},
]
keywords = ["max", "messenger", "yandexgpt", "bot", "ai", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "maxapi>=0.1.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nabinabi11/max-yandexgpt"
Repository = "https://github.com/nabinabi11/max-yandexgpt"
Issues = "https://github.com/nabinabi11/max-yandexgpt/issues"

[tool.setuptools.packages.find]
include = ["max_yandexgpt*"]
